@@ -1,0 +1,10 @@
+﻿namespace MvcBoilerplate
+{
+    using System.Collections.Generic;
+    using Microsoft.AspNet.Mvc;
+
+    public class CacheProfileSettings
+    {
+        public Dictionary<string, CacheProfile> CacheProfiles { get; set; }
+    }
+}
